// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Markdown> handle images 1`] = `
<View
  style={{}}
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
        "width": "100%",
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        [
          {
            "flex": 1,
          },
          {
            "flexGrow": 1,
          },
          {
            "height": 0,
          },
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        accessibilityLabel="alt text"
        accessible={true}
        indicator={true}
        onError={[Function]}
        onLayout={[Function]}
        onLoad={[Function]}
        onLoadStart={[Function]}
        source={
          {
            "uri": "file://path/to/foo.png",
          }
        }
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "height": 0,
              "width": undefined,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`<Markdown> handle links 1`] = `
<View
  style={{}}
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
        "marginBottom": 10,
        "marginTop": 10,
        "width": "100%",
      }
    }
  >
    <Text
      style={{}}
    />
  </View>
</View>
`;
